docs/api/qiskit/0.24/qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.md
---
title: BarrierBeforeFinalMeasurements
description: API reference for qiskit.transpiler.passes.BarrierBeforeFinalMeasurements
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.BarrierBeforeFinalMeasurements
---

<span id="qiskit-transpiler-passes-barrierbeforefinalmeasurements" />

# qiskit.transpiler.passes.BarrierBeforeFinalMeasurements

<span id="qiskit.transpiler.passes.BarrierBeforeFinalMeasurements" />

`BarrierBeforeFinalMeasurements(*args, **kwargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/transpiler/passes/utils/barrier_before_final_measurements.py "view source code")

Add a barrier before final measurements.

This pass adds a barrier before the set of final measurements. Measurements are considered final if they are followed by no other operations (aside from other measurements or barriers.)

### \_\_init\_\_

<span id="qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.__init__" />

`__init__()`

Initialize self. See help(type(self)) for accurate signature.

## Methods

|                                                                                                                                                      |                                                     |
| ---------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------- |
| [`__init__`](#qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.__init__ "qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.__init__")() | Initialize self.                                    |
| [`name`](#qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.name "qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.name")()             | Return the name of the pass.                        |
| [`run`](#qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.run "qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.run")(dag)             | Run the BarrierBeforeFinalMeasurements pass on dag. |

## Attributes

|                                                                                                                                                                                              |                                             |
| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------- |
| [`is_analysis_pass`](#qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.is_analysis_pass "qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
| [`is_transformation_pass`](#qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.is_transformation_pass "qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.is_transformation_pass") | Check if the pass is a transformation pass. |

### is\_analysis\_pass

<span id="qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.is_analysis_pass" />

`property is_analysis_pass`

Check if the pass is an analysis pass.

If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.

### is\_transformation\_pass

<span id="qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.is_transformation_pass" />

`property is_transformation_pass`

Check if the pass is a transformation pass.

If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).

### name

<span id="qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.name" />

`name()`

Return the name of the pass.

### run

<span id="qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.run" />

`run(dag)`

Run the BarrierBeforeFinalMeasurements pass on dag.

